style added for index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,18 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+h1 {
+  font-family: 'Limelight', cursive;
+  color: #CF291D;
+}
+h2 {
+  font-family: 'Limelight', cursive;
+  color: #CF291D;
+}
+a {
+  color: #CF291D
+}
+a:hover {
+  color: #CF291D
+}
