--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,5 @@
 <%# navbar %>
-<div class="navbar">
+<div class="navbar fixed-top">
   <h1 id="home"><%= link_to "🍿", lists_path %></h1>
   <h2 id="new-list"><%= link_to "New List", new_list_path %></h2>
 </div>
