--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,16 +1,16 @@
 <%# navbar %>
-<div class="navbar">
+<div class="navbar fixed-top">
   <h1 id="home"><%= link_to "🍿", lists_path %></h1>
   <h2 id="new-list"><%= link_to "New List", new_list_path %></h2>
 </div>
 <%# form %>
 <h1>New Bookmark</h1>
 <div id="form">
-  <%= simple_form_for[ @list, @bookmark ] do |f| %>
+  <%= simple_form_for([ @list, @bookmark ]) do |f| %>
     <div id="form-comment">
       <%= f.label "Comment" %>
       <%= f.association :movie %>
-
+      <%= f.association :list %>
       <%= f.text_area :comment, data: { editor: 'markdown' }, rows: 10 %>
     </div>
     <div id="form-btn">
