--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,17 @@
 <%# navbar %>
-<div class="navbar">
+<div class="navbar fixed-top">
   <h1 id="home"><%= link_to "🍿", lists_path %></h1>
   <h2 id="new-list"><%= link_to "New List", new_list_path %></h2>
 </div>
+<%# banner %>
+<div class="banner">
+  <%= image_tag "computer.png", alt: "computer", style: "position:relative", width: "100%" %>
+</div>
+<h2><span id="banner-typed-text"></span></h2>
+<%# My Lists %>
 <h1>My Lists</h1>
-<% @lists.each do |list| %>
-  <div class="list">
-    <%= link_to list.name, list_path(list.id) %>
-  </div>
-<% end %>
+<div id="all-lists">
+  <% @lists.each do |list| %>
+    <div id="list-item"><h1><%= link_to list.name, list_path(list.id) %></h1></div>
+  <% end %>
+</div>
