--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,7 +3,7 @@
   <h1 id="home"><%= link_to "🍿", lists_path %></h1>
   <h2 id="new-list"><%= link_to "New List", new_list_path %></h2>
 </div>
-<h1><%= @list.name %></h1>
+<h1 id="list-name"><%= @list.name %></h1>
 <h2 id="movie-title"><%= @bookmarks.movie.title%></h2>
-<%= @bookmarks.comment %>
-<%= link_to "Create a Bookmark for This Movie", new_bookmark_path %>
+<p id="movie-comment"><%= @bookmarks.comment %></p>
+<h3 id="new-bookmark"><%= link_to "Create a Bookmark for This Movie", new_bookmark_path %></h3>
