--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -19,16 +19,10 @@
   top: 70px;
   left: 25px;
 }
-#movie-title {
-  position: absolute;
-  top: 150px;
-  left: 25px;
-}
-#movie-comment {
-  position: absolute;
-  top: 200px;
-  left: 25px;
-}
+// #movie-title {
+// }
+// #movie-comment {
+// }
 #new-bookmark {
   position: absolute;
   top: 250px;
