--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,11 +10,15 @@
 <h2><span id="banner-typed-text"></span></h2>
 <%# My Lists %>
 <div class="container">
-  <h1>My Lists</h1>
+<h1>My Lists</h1>
   <div id="all-lists">
     <div class="row">
       <% @lists.each do |list| %>
-        <div class="col-3" id="list-item"><h1><%= link_to list.name, list_path(list.id) %></h1></div>
+        <% if list.photo.key.present? %>
+          <div class="col-3" id="list-item" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')"><h1><%= link_to list.name, list_path(list.id) %></h1></div>
+        <% else %>
+          <div class="col-3" id="list-item"><h1><%= link_to list.name, list_path(list.id) %></h1></div>
+        <% end %>
       <% end %>
     </div>
   </div>
